--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,30 @@
 @tailwind utilities;
 
 :root {
+  /* --primary-50: 236 253 245;
+  --primary-100: 209 250 229;
+  --primary-200: 167 243 208;
+  --primary-300: 110 231 183;
+  --primary-400: 126 48 225;
+  --primary-500: 16 185 129;
+  --primary-600: 5 150 105;
+  --primary-700: 4 120 87;
+  --primary-800: 6 95 70;
+  --primary-900: 4 78 56;
+  --primary-950: 2 44 34;
+  --surface-0: 255 255 255;
+  --surface-50: 248 250 252;
+  --surface-100: 241 245 249;
+  --surface-200: 0 0 0;
+  --surface-300: 203 213 225;
+  --surface-400: 148 163 184;
+  --surface-500: 100 116 139;
+  --surface-600: 191 191 191;
+  --surface-700: 45 55 72;
+  --surface-800: 30 41 59;
+  --surface-900: 15 23 42;
+  --surface-950: 3 6 23; */
+
   --primary-50: 236 253 245;
   --primary-100: 209 250 229;
   --primary-200: 167 243 208;
@@ -22,8 +46,15 @@
   --surface-400: 148 163 184;
   --surface-500: 100 116 139;
   --surface-600: 191 191 191;
-  /* --surface-700: 45 55 72;
+  --surface-700: 45 55 72;
   --surface-800: 30 41 59;
   --surface-900: 15 23 42;
-  --surface-950: 3 6 23; */
+  --surface-950: 3 6 23;
+
+  --color-1: "#6BB7BE";
+  --color-2: "#DBE6EA";
+  --color-3: "#64748B";
+  --color-4: "#000000";
+  --color-5: "#808080";
+  --color-6: "#E0E0E0";
 }
